# newsmailing

./: .coveragerc  .gitignore  LICENSE  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: develop-deploy.yml  master-deploy.yml
app/: conftest.py  pytest.ini
app/articles/: admin.py  models.py  tests.py  urls.py  views.py
app/articles/migrations/: 0001_initial.py  0002_article_url.py  0002_auto_20200611_1703.py
app/config/: settings.py  urls.py
app/members/: forms.py  models.py  tasks.py  tests.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200608_1848.py  0002_auto_20200611_1947.py  0003_auto_20200609_1604.py  0004_auto_20200611_1608.py  0005_auto_20200611_1612.py  0006_auto_20200611_1639.py  0007_auto_20200611_1701.py
app/members/tests/: test_email_auth.py
app/scraper/: items.py  log.txt  pipelines.py  settings.py
app/scraper/spiders/: news_spider.py
app/static/css/: header.css
app/subscriptions/: models.py
app/subscriptions/migrations/: 0001_initial.py
app/templates/: base.html  header.html  index.html  submit_email.html
app/templates/email/: signup_email.html
app/templates/test/: testview.html
app/test_codes/: Untitled.ipynb  Untitled1.ipynb
