[tool.poetry]
name = "newsmailing"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"
django-extensions = "^2.2.9"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
