[tool.poetry]
name = "newsmailing"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
pytest = "^5.4.3"
pytest-django = "^3.9.0"
codecov = "^2.1.4"
pytest-cov = "^2.9.0"
Faker = "^4.1.0"
model_bakery = "^1.1.0"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"
django-extensions = "^2.2.9"
django-debug-toolbar = "^2.2"
model_bakery = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
